examples/test/testpolicy3078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3078
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key1: value26
      key27: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value31
          key26: value28
      podSelector:
        matchLabels:
          key40: value46
          key32: value44
          key10: value9
